# rv.rs

./: ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  cliff.toml
.claude/: HOOKS.md  settings.json
.claude/scripts/: post-commit-changelog.sh  post-edit-hook.sh
.githooks/: commit-msg
.github/workflows/: ci.yml
graphify-out/: .graphify_ast.json  .graphify_chunk_01.json  .graphify_detect.json  .graphify_labels.json  .graphify_python  .graphify_root  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
scripts/: release.sh
src/: main.rs
src/cli/: mod.rs
src/commands/: build.rs  clean.rs  debug.rs  disasm.rs  hex.rs  memmap.rs  mod.rs  new.rs  run.rs  sections.rs  symbols.rs  watch.rs
src/compiler/: gcc.rs
src/config/: mod.rs
src/gdb/: debug.rs
src/platform/: mod.rs
src/qemu/: run.rs
src/templates/: mod.rs
test/: rv.toml
test/src/: test.S
