[package]
name = "rv"
version = "0.2.0"
edition = "2024"
description = "A Cargo-like build tool for RISC-V assembly development"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "3"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
notify = "8"
notify-debouncer-mini = "0.6"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.8"
walkdir = "2"

[profile.release]
strip = true
lto = true
